# calwarn

./: .gitignore  README.md  arsenal_home_calwarn.sh  calwarn.py  default.nix  flake.nix  pyproject.toml  requirements.txt  shell.nix
calwarn/: calwarn.py
